--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.OpenGlActivity1"></activity>
+        <activity android:name=".activity.OpenGlActivity1" />
+        <activity android:name=".activity.OpenGlActivity2"></activity>
     </application>
 
 </manifest>
