--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,7 +26,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.OpenGlActivity1" />
-        <activity android:name=".activity.OpenGlActivity2"></activity>
+        <activity android:name=".activity.OpenGlActivity2" />
+        <activity android:name=".camera.activity.CameraActivity"></activity>
     </application>
 
 </manifest>
