--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
@@ -27,7 +28,7 @@
         </activity>
         <activity android:name=".activity.OpenGlActivity1" />
         <activity android:name=".activity.OpenGlActivity2" />
-        <activity android:name=".camera.activity.CameraActivity"></activity>
+        <activity android:name=".camera.activity.CameraActivity" />
     </application>
 
 </manifest>
